--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ env:
   AWS_REGION: eu-north-1
   ECR_REPOSITORY: sumer-frontend
   ECS_SERVICE: sumer-frontend-service
-  ECS_CLUSTER: sumer-cluster
+  ECS_CLUSTER: sumer-sumer-sbx-api-apiecscluster
   ECS_TASK_DEFINITION: sumer-frontend-task-definition
   CONTAINER_NAME: sumer-frontend-container
 
@@ -27,8 +27,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: "18"
+          cache: "npm"
 
       - name: Install Dependencies
         run: npm ci
@@ -44,34 +44,22 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # Set environment variables based on branch
-      - name: Set environment specific variables
-        id: set-env
-        run: |
-          if [[ $GITHUB_REF == 'refs/heads/main' ]]; then
-            echo "ENV_SUFFIX=prod" >> $GITHUB_ENV
-          else
-            echo "ENV_SUFFIX=dev" >> $GITHUB_ENV
-          fi
-          echo "IMAGE_TAG=${GITHUB_SHA::8}-${ENV_SUFFIX}" >> $GITHUB_ENV
-
-      # Build and push Docker image to ECR
-      - name: Build, tag, and push Docker image to Amazon ECR
+      - name: Build, tag, and push Docker image
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ env.IMAGE_TAG }}
+          IMAGE_TAG: latest
         run: |
           echo "Building Docker image..."
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build --no-cache -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+
           echo "Pushing Docker image to ECR..."
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       # Download current task definition
       - name: Download task definition
         run: |
-          aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }}-${{ env.ENV_SUFFIX }} \
+          aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} \
           --query taskDefinition > task-definition.json
 
       # Update the task definition with the new image
@@ -80,7 +68,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: ${{ env.CONTAINER_NAME }}-${{ env.ENV_SUFFIX }}
+          container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.image }}
 
       # Deploy the updated task definition to ECS
